[gd_scene load_steps=16 format=3 uid="uid://cq15f8smm64gs"]

[ext_resource type="Texture2D" uid="uid://balvnfn6fki56" path="res://addons/Tiny Swords/Factions/Knights/Troops/Warrior/Purple/Warrior_Purple.png" id="1_sc5av"]
[ext_resource type="Script" path="res://player/player.gd" id="1_ynk7q"]
[ext_resource type="PackedScene" uid="uid://df30so72o4ia2" path="res://misc/skull_big.tscn" id="2_rydh5"]
[ext_resource type="PackedScene" uid="uid://b0xt8xf1c7s30" path="res://player/spell.tscn" id="3_pphkk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_va0y8"]
radius = 16.0312

[sub_resource type="Animation" id="Animation_hsp4k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_mk3be"]
resource_name = "attack_side_a"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"deal_damage_to_enemies"
}]
}

[sub_resource type="Animation" id="Animation_ig82u"]
resource_name = "attack_side_b"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3), Vector2i(5, 3)]
}

[sub_resource type="Animation" id="Animation_4el2u"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0)]
}

[sub_resource type="Animation" id="Animation_hyxhf"]
resource_name = "running"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_okd4t"]
_data = {
"RESET": SubResource("Animation_hsp4k"),
"attack_side_a": SubResource("Animation_mk3be"),
"attack_side_b": SubResource("Animation_ig82u"),
"idle": SubResource("Animation_4el2u"),
"running": SubResource("Animation_hyxhf")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_ha8w5"]
radius = 99.0202

[sub_resource type="CircleShape2D" id="CircleShape2D_wncqg"]
radius = 23.0868

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ma5wd"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cbt7n"]
bg_color = Color(0.921569, 0, 0, 1)

[node name="Player" type="CharacterBody2D" groups=["players"]]
motion_mode = 1
script = ExtResource("1_ynk7q")
spell_prefab = ExtResource("3_pphkk")
death_prefab = ExtResource("2_rydh5")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -28)
texture = ExtResource("1_sc5av")
hframes = 6
vframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_va0y8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_okd4t")
}
autoplay = "idle"

[node name="damageArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="damageArea"]
visible = false
position = Vector2(0, -28)
shape = SubResource("CircleShape2D_ha8w5")
debug_color = Color(1, 0, 0, 0.0627451)

[node name="hitboxArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitboxArea"]
visible = false
position = Vector2(0, -28)
shape = SubResource("CircleShape2D_wncqg")
debug_color = Color(0.952908, 6.73831e-07, 0.556266, 0.42)

[node name="HealthProgressBar" type="ProgressBar" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -28.0
offset_top = 14.0
offset_right = 29.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_ma5wd")
theme_override_styles/fill = SubResource("StyleBoxFlat_cbt7n")
step = 1.0
value = 50.0
show_percentage = false
